Fix bugs in mysql startup, correct mount dir

--- a/mount/config/my.cnf
+++ b/mount/config/my.cnf
@@ -20,21 +20,21 @@ bind-address                   = 0.0.0.0
 port                           = 3306
 
 basedir                        = /usr
-datadir                        = /mount/database
+datadir                        = /rook/persist/db
 tmpdir                         = /tmp
 lc-messages-dir                = /usr/share/mysql
 
 
 # Error log
 
-log_error                      = /mount/log/error.log
+log_error                      = /rook/persist/log/error.log
 log_warnings                   = 2
 
 
 # Slow query log
 
 slow_query_log                 = 1
-slow_query_log_file            = /mount/log/mysql-slow.log
+slow_query_log_file            = /rook/persist/log/mysql-slow.log
 log_queries_not_using_indexes  = 1
 long_query_time                = 2
 min_examined_row_limit         = 100
@@ -77,7 +77,7 @@ innodb_log_file_size           = 256M
 # Binary logging and replication
 
 #server-id                      = <id>
-#log_bin                        = /mount/log/mmysql-bin.log
+#log_bin                        = /rook/persist/log/mmysql-bin.log
 #binlog_cache_size              = 1M
 #binlog_stmt_cache_size         = 1M
 #max_binlog_size                = 128M
